リファクタリング

--- a/examples/index.html
+++ b/examples/index.html
@@ -36,7 +36,7 @@
 				end  : endEvent
 			}
 		};
-		TouchCtrl.init(config);
+		TouchCtrl(config);
 		function startEvent() {
 			console.log('startEvent');
 			console.log(arguments[0]);
